[package]
name = "solana-token"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.17"
thiserror = "1.0.40"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"
borsh = "0.9.3"

[dev-dependencies]
solana-sdk = "1.18.17"
solana-program-test = "1.18.17"

[lib]
crate-type = ["cdylib", "lib"]